refactor: delete the extra one method filter
