# storage/api-docs/api-docs.json
@@ -5,21 +5,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/v1/cars": {
-            "get": {
-                "tags": [
-                    "Car"
-                ],
-                "summary": "Get all cars by pagination",
-                "operationId": "e281fb4d4439d19a0326fe1cbd7eaffc",
-                "requestBody": {},
-                "responses": {
-                    "200": {
-                        "description": "Ok"
-                    }
-                }
-            }
-        },
+        "/api/v1/cars": {},
         "/api/v1/register": {
             "post": {
                 "tags": [
@@ -226,116 +212,6 @@
                 ],
                 "summary": "Get car by id",
                 "operationId": "cee0c4406cfbf35c7b8733e6f65a1825",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "ID of the car",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        },
-                        "example": 21
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Ok",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "properties": {
-                                                    "brand": {
-                                                        "properties": {
-                                                            "id": {
-                                                                "type": "integer",
-                                                                "example": "2"
-                                                            },
-                                                            "name": {
-                                                                "type": "string",
-                                                                "example": "Volkswagen"
-                                                            }
-                                                        },
-                                                        "type": "object"
-                                                    },
-                                                    "car_models": {
-                                                        "properties": {
-                                                            "id": {
-                                                                "type": "integer",
-                                                                "example": "5"
-                                                            },
-                                                            "name": {
-                                                                "type": "string",
-                                                                "example": "Passat"
-                                                            }
-                                                        },
-                                                        "type": "object"
-                                                    },
-                                                    "price": {
-                                                        "type": "string",
-                                                        "format": "float",
-                                                        "example": "709.89"
-                                                    },
-                                                    "availability": {
-                                                        "type": "integer",
-                                                        "example": "1"
-                                                    },
-                                                    "year": {
-                                                        "type": "integer",
-                                                        "example": "2024"
-                                                    },
-                                                    "fuel_type": {
-                                                        "type": "string",
-                                                        "example": "Electric"
-                                                    },
-                                                    "transmission": {
-                                                        "type": "string",
-                                                        "example": "Manual"
-                                                    },
-                                                    "seats": {
-                                                        "type": "integer",
-                                                        "example": "5"
-                                                    },
-                                                    "color": {
-                                                        "type": "string",
-                                                        "example": "white"
-                                                    },
-                                                    "image": {
-                                                        "type": "string",
-                                                        "example": "car1.jpg"
-                                                    },
-                                                    "description": {
-                                                        "type": "string",
-                                                        "example": "In et enim laborum. Iste ex suscipit et tenetur et."
-                                                    }
-                                                },
-                                                "type": "object"
-                                            }
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Car not found"
-                    }
-                }
-            }
-        },
-        "/api/v1/cars/{id}/filter": {
-            "get": {
-                "tags": [
-                    "Car"
-                ],
-                "summary": "Get car by id",
-                "operationId": "a13363f25b7029fe8ce683eb6523c2c4",
                 "parameters": [
                     {
                         "name": "id",
